src/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  ExtendsClause : EXTENDS IDENTIFIER
  14                |

  15  FieldList : FieldList VariableDef
  16            | FieldList FunctionDef
  17            |

  18  Formals : VariableList
  19          |

  20  VariableList : VariableList ',' Variable
  21               | Variable

  22  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  23              | Type IDENTIFIER '(' Formals ')' StmtBlock

  24  StmtBlock : '{' StmtList '}'

  25  StmtList : StmtList Stmt
  26           |

  27  Stmt : VariableDef
  28       | SimpleStmt ';'
  29       | IfStmt
  30       | WhileStmt
  31       | ForStmt
  32       | ReturnStmt ';'
  33       | PrintStmt ';'
  34       | BreakStmt ';'
  35       | StmtBlock
  36       | GuardedIfStmt
  37       | GuardedDoStmt

  38  SimpleStmt : LValue '=' Expr
  39             | Call
  40             |

  41  Receiver : Expr '.'
  42           |

  43  LValue : Receiver IDENTIFIER
  44         | Expr '[' Expr ']'

  45  Call : Receiver IDENTIFIER '(' Actuals ')'

  46  Expr : LValue
  47       | Call
  48       | Constant
  49       | Expr '?' Expr ':' Expr
  50       | Expr '+' Expr
  51       | Expr '-' Expr
  52       | Expr '*' Expr
  53       | Expr '/' Expr
  54       | Expr '%' Expr
  55       | Expr EQUAL Expr
  56       | Expr NOT_EQUAL Expr
  57       | Expr '<' Expr
  58       | Expr '>' Expr
  59       | Expr LESS_EQUAL Expr
  60       | Expr GREATER_EQUAL Expr
  61       | Expr AND Expr
  62       | Expr OR Expr
  63       | '(' Expr ')'
  64       | '-' Expr
  65       | '!' Expr
  66       | Expr SELF_INC
  67       | SELF_INC Expr
  68       | Expr SELF_DEC
  69       | SELF_DEC Expr
  70       | READ_INTEGER '(' ')'
  71       | READ_LINE '(' ')'
  72       | THIS
  73       | NEW IDENTIFIER '(' ')'
  74       | NEW Type '[' Expr ']'
  75       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  76       | '(' CLASS IDENTIFIER ')' Expr
  77       | NUMINSTANCES '(' IDENTIFIER ')'

  78  Constant : LITERAL
  79           | NULL

  80  Actuals : ExprList
  81          |

  82  ExprList : ExprList ',' Expr
  83           | Expr

  84  WhileStmt : WHILE '(' Expr ')' Stmt

  85  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

  86  BreakStmt : BREAK

  87  IfStmt : IF '(' Expr ')' Stmt ElseClause

  88  ElseClause : ELSE Stmt
  89             |

  90  ReturnStmt : RETURN Expr
  91             | RETURN

  92  PrintStmt : PRINT '(' ExprList ')'

  93  GuardedIfStmt : IF GuardedStmts FI

  94  GuardedDoStmt : DO GuardedStmts OD

  95  GuardedStmts : GuardedStmts CASESEP Expr ':' Stmt
  96               | Expr ':' Stmt

state 0
	$accept : . Program $end  (0)

	CLASS  shift 1
	.  error

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4


state 1
	ClassDef : CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 5
	.  error


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)

	CLASS  shift 1
	$end  reduce 1

	ClassDef  goto 6


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (14)

	EXTENDS  shift 7
	'{'  reduce 14

	ExtendsClause  goto 8


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ExtendsClause : EXTENDS . IDENTIFIER  (13)

	IDENTIFIER  shift 9
	.  error


state 8
	ClassDef : CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 10
	.  error


state 9
	ExtendsClause : EXTENDS IDENTIFIER .  (13)

	.  reduce 13


state 10
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (17)

	.  reduce 17

	FieldList  goto 11


state 11
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (15)
	FieldList : FieldList . FunctionDef  (16)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	STATIC  shift 17
	'}'  shift 18
	.  error

	VariableDef  goto 19
	Variable  goto 20
	Type  goto 21
	FunctionDef  goto 22


state 12
	Type : VOID .  (7)

	.  reduce 7


state 13
	Type : BOOL .  (8)

	.  reduce 8


state 14
	Type : INT .  (6)

	.  reduce 6


state 15
	Type : STRING .  (9)

	.  reduce 9


state 16
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 23
	.  error


state 17
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (22)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Type  goto 24


state 18
	ClassDef : CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 19
	FieldList : FieldList VariableDef .  (15)

	.  reduce 15


state 20
	VariableDef : Variable . ';'  (4)

	';'  shift 25
	.  error


state 21
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (23)

	IDENTIFIER  shift 26
	'['  shift 27
	.  error


state 22
	FieldList : FieldList FunctionDef .  (16)

	.  reduce 16


state 23
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 24
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (22)

	IDENTIFIER  shift 28
	'['  shift 27
	.  error


state 25
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 26
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (23)

	'('  shift 29
	';'  reduce 5


state 27
	Type : Type '[' . ']'  (11)

	']'  shift 30
	.  error


state 28
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (22)

	'('  shift 31
	.  error


state 29
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (23)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 34
	VariableList  goto 35


state 30
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 31
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (22)
	Formals : .  (19)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	')'  reduce 19

	Variable  goto 32
	Type  goto 33
	Formals  goto 36
	VariableList  goto 35


state 32
	VariableList : Variable .  (21)

	.  reduce 21


state 33
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 37
	'['  shift 27
	.  error


state 34
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (23)

	')'  shift 38
	.  error


state 35
	Formals : VariableList .  (18)
	VariableList : VariableList . ',' Variable  (20)

	','  shift 39
	')'  reduce 18


state 36
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (22)

	')'  shift 40
	.  error


state 37
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 38
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (23)

	'{'  shift 41
	.  error

	StmtBlock  goto 42


state 39
	VariableList : VariableList ',' . Variable  (20)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	.  error

	Variable  goto 43
	Type  goto 33


state 40
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (22)

	'{'  shift 41
	.  error

	StmtBlock  goto 44


state 41
	StmtBlock : '{' . StmtList '}'  (24)
	StmtList : .  (26)

	.  reduce 26

	StmtList  goto 45


state 42
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (23)

	.  reduce 23


state 43
	VariableList : VariableList ',' Variable .  (20)

	.  reduce 20


state 44
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (22)

	.  reduce 22


state 45
	StmtBlock : '{' StmtList . '}'  (24)
	StmtList : StmtList . Stmt  (25)
	SimpleStmt : .  (40)
	Receiver : .  (42)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	NULL  shift 46
	THIS  shift 47
	WHILE  shift 48
	FOR  shift 49
	IF  shift 50
	RETURN  shift 51
	BREAK  shift 52
	NEW  shift 53
	PRINT  shift 54
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	DO  shift 62
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	'{'  shift 41
	'}'  shift 66
	IDENTIFIER  reduce 42
	';'  reduce 40

	VariableDef  goto 67
	Variable  goto 20
	Type  goto 33
	StmtBlock  goto 68
	Stmt  goto 69
	SimpleStmt  goto 70
	IfStmt  goto 71
	WhileStmt  goto 72
	ForStmt  goto 73
	ReturnStmt  goto 74
	PrintStmt  goto 75
	BreakStmt  goto 76
	GuardedIfStmt  goto 77
	GuardedDoStmt  goto 78
	LValue  goto 79
	Expr  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 46
	Constant : NULL .  (79)

	.  reduce 79


state 47
	Expr : THIS .  (72)

	.  reduce 72


state 48
	WhileStmt : WHILE . '(' Expr ')' Stmt  (84)

	'('  shift 84
	.  error


state 49
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (85)

	'('  shift 85
	.  error


state 50
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (87)
	GuardedIfStmt : IF . GuardedStmts FI  (93)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 86
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 88
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83
	GuardedStmts  goto 90


state 51
	ReturnStmt : RETURN . Expr  (90)
	ReturnStmt : RETURN .  (91)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42
	';'  reduce 91

	LValue  goto 87
	Expr  goto 91
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 52
	BreakStmt : BREAK .  (86)

	.  reduce 86


state 53
	Expr : NEW . IDENTIFIER '(' ')'  (73)
	Expr : NEW . Type '[' Expr ']'  (74)

	VOID  shift 12
	BOOL  shift 13
	INT  shift 14
	STRING  shift 15
	CLASS  shift 16
	IDENTIFIER  shift 92
	.  error

	Type  goto 93


state 54
	PrintStmt : PRINT . '(' ExprList ')'  (92)

	'('  shift 94
	.  error


state 55
	Expr : READ_INTEGER . '(' ')'  (70)

	'('  shift 95
	.  error


state 56
	Expr : READ_LINE . '(' ')'  (71)

	'('  shift 96
	.  error


state 57
	Constant : LITERAL .  (78)

	.  reduce 78


state 58
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (75)

	'('  shift 97
	.  error


state 59
	Expr : SELF_INC . Expr  (67)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 98
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 60
	Expr : SELF_DEC . Expr  (69)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 99
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 61
	Expr : NUMINSTANCES . '(' IDENTIFIER ')'  (77)

	'('  shift 100
	.  error


state 62
	GuardedDoStmt : DO . GuardedStmts OD  (94)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 88
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83
	GuardedStmts  goto 101


state 63
	Expr : '-' . Expr  (64)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 102
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 64
	Expr : '!' . Expr  (65)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 103
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 65
	Expr : '(' . Expr ')'  (63)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (76)
	Receiver : .  (42)

	CLASS  shift 104
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 105
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 66
	StmtBlock : '{' StmtList '}' .  (24)

	.  reduce 24


state 67
	Stmt : VariableDef .  (27)

	.  reduce 27


state 68
	Stmt : StmtBlock .  (35)

	.  reduce 35


state 69
	StmtList : StmtList Stmt .  (25)

	.  reduce 25


state 70
	Stmt : SimpleStmt . ';'  (28)

	';'  shift 106
	.  error


state 71
	Stmt : IfStmt .  (29)

	.  reduce 29


state 72
	Stmt : WhileStmt .  (30)

	.  reduce 30


state 73
	Stmt : ForStmt .  (31)

	.  reduce 31


state 74
	Stmt : ReturnStmt . ';'  (32)

	';'  shift 107
	.  error


state 75
	Stmt : PrintStmt . ';'  (33)

	';'  shift 108
	.  error


state 76
	Stmt : BreakStmt . ';'  (34)

	';'  shift 109
	.  error


state 77
	Stmt : GuardedIfStmt .  (36)

	.  reduce 36


state 78
	Stmt : GuardedDoStmt .  (37)

	.  reduce 37


state 79
	SimpleStmt : LValue . '=' Expr  (38)
	Expr : LValue .  (46)

	'='  shift 110
	AND  reduce 46
	OR  reduce 46
	LESS_EQUAL  reduce 46
	GREATER_EQUAL  reduce 46
	EQUAL  reduce 46
	NOT_EQUAL  reduce 46
	SELF_INC  reduce 46
	SELF_DEC  reduce 46
	'+'  reduce 46
	'-'  reduce 46
	'*'  reduce 46
	'/'  reduce 46
	'%'  reduce 46
	'>'  reduce 46
	'<'  reduce 46
	'.'  reduce 46
	'['  reduce 46
	'?'  reduce 46


state 80
	Receiver : Expr . '.'  (41)
	LValue : Expr . '[' Expr ']'  (44)
	Expr : Expr . '?' Expr ':' Expr  (49)
	Expr : Expr . '+' Expr  (50)
	Expr : Expr . '-' Expr  (51)
	Expr : Expr . '*' Expr  (52)
	Expr : Expr . '/' Expr  (53)
	Expr : Expr . '%' Expr  (54)
	Expr : Expr . EQUAL Expr  (55)
	Expr : Expr . NOT_EQUAL Expr  (56)
	Expr : Expr . '<' Expr  (57)
	Expr : Expr . '>' Expr  (58)
	Expr : Expr . LESS_EQUAL Expr  (59)
	Expr : Expr . GREATER_EQUAL Expr  (60)
	Expr : Expr . AND Expr  (61)
	Expr : Expr . OR Expr  (62)
	Expr : Expr . SELF_INC  (66)
	Expr : Expr . SELF_DEC  (68)

	AND  shift 111
	OR  shift 112
	LESS_EQUAL  shift 113
	GREATER_EQUAL  shift 114
	EQUAL  shift 115
	NOT_EQUAL  shift 116
	SELF_INC  shift 117
	SELF_DEC  shift 118
	'+'  shift 119
	'-'  shift 120
	'*'  shift 121
	'/'  shift 122
	'%'  shift 123
	'>'  shift 124
	'<'  shift 125
	'.'  shift 126
	'['  shift 127
	'?'  shift 128
	.  error


state 81
	SimpleStmt : Call .  (39)
	Expr : Call .  (47)

	AND  reduce 47
	OR  reduce 47
	LESS_EQUAL  reduce 47
	GREATER_EQUAL  reduce 47
	EQUAL  reduce 47
	NOT_EQUAL  reduce 47
	SELF_INC  reduce 47
	SELF_DEC  reduce 47
	'+'  reduce 47
	'-'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	'%'  reduce 47
	'>'  reduce 47
	'<'  reduce 47
	'.'  reduce 47
	';'  reduce 39
	')'  reduce 39
	'['  reduce 47
	'?'  reduce 47


state 82
	LValue : Receiver . IDENTIFIER  (43)
	Call : Receiver . IDENTIFIER '(' Actuals ')'  (45)

	IDENTIFIER  shift 129
	.  error


state 83
	Expr : Constant .  (48)

	.  reduce 48


state 84
	WhileStmt : WHILE '(' . Expr ')' Stmt  (84)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 130
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 85
	ForStmt : FOR '(' . SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (85)
	SimpleStmt : .  (40)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42
	';'  reduce 40

	SimpleStmt  goto 131
	LValue  goto 79
	Expr  goto 80
	Call  goto 81
	Receiver  goto 82
	Constant  goto 83


state 86
	Expr : '(' . Expr ')'  (63)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (76)
	IfStmt : IF '(' . Expr ')' Stmt ElseClause  (87)
	Receiver : .  (42)

	CLASS  shift 104
	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 132
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 87
	Expr : LValue .  (46)

	.  reduce 46


state 88
	Receiver : Expr . '.'  (41)
	LValue : Expr . '[' Expr ']'  (44)
	Expr : Expr . '?' Expr ':' Expr  (49)
	Expr : Expr . '+' Expr  (50)
	Expr : Expr . '-' Expr  (51)
	Expr : Expr . '*' Expr  (52)
	Expr : Expr . '/' Expr  (53)
	Expr : Expr . '%' Expr  (54)
	Expr : Expr . EQUAL Expr  (55)
	Expr : Expr . NOT_EQUAL Expr  (56)
	Expr : Expr . '<' Expr  (57)
	Expr : Expr . '>' Expr  (58)
	Expr : Expr . LESS_EQUAL Expr  (59)
	Expr : Expr . GREATER_EQUAL Expr  (60)
	Expr : Expr . AND Expr  (61)
	Expr : Expr . OR Expr  (62)
	Expr : Expr . SELF_INC  (66)
	Expr : Expr . SELF_DEC  (68)
	GuardedStmts : Expr . ':' Stmt  (96)

	AND  shift 111
	OR  shift 112
	LESS_EQUAL  shift 113
	GREATER_EQUAL  shift 114
	EQUAL  shift 115
	NOT_EQUAL  shift 116
	SELF_INC  shift 117
	SELF_DEC  shift 118
	'+'  shift 119
	'-'  shift 120
	'*'  shift 121
	'/'  shift 122
	'%'  shift 123
	'>'  shift 124
	'<'  shift 125
	'.'  shift 126
	'['  shift 127
	'?'  shift 128
	':'  shift 133
	.  error


state 89
	Expr : Call .  (47)

	.  reduce 47


state 90
	GuardedIfStmt : IF GuardedStmts . FI  (93)
	GuardedStmts : GuardedStmts . CASESEP Expr ':' Stmt  (95)

	FI  shift 134
	CASESEP  shift 135
	.  error


state 91
	Receiver : Expr . '.'  (41)
	LValue : Expr . '[' Expr ']'  (44)
	Expr : Expr . '?' Expr ':' Expr  (49)
	Expr : Expr . '+' Expr  (50)
	Expr : Expr . '-' Expr  (51)
	Expr : Expr . '*' Expr  (52)
	Expr : Expr . '/' Expr  (53)
	Expr : Expr . '%' Expr  (54)
	Expr : Expr . EQUAL Expr  (55)
	Expr : Expr . NOT_EQUAL Expr  (56)
	Expr : Expr . '<' Expr  (57)
	Expr : Expr . '>' Expr  (58)
	Expr : Expr . LESS_EQUAL Expr  (59)
	Expr : Expr . GREATER_EQUAL Expr  (60)
	Expr : Expr . AND Expr  (61)
	Expr : Expr . OR Expr  (62)
	Expr : Expr . SELF_INC  (66)
	Expr : Expr . SELF_DEC  (68)
	ReturnStmt : RETURN Expr .  (90)

	AND  shift 111
	OR  shift 112
	LESS_EQUAL  shift 113
	GREATER_EQUAL  shift 114
	EQUAL  shift 115
	NOT_EQUAL  shift 116
	SELF_INC  shift 117
	SELF_DEC  shift 118
	'+'  shift 119
	'-'  shift 120
	'*'  shift 121
	'/'  shift 122
	'%'  shift 123
	'>'  shift 124
	'<'  shift 125
	'.'  shift 126
	'['  shift 127
	'?'  shift 128
	';'  reduce 90


state 92
	Expr : NEW IDENTIFIER . '(' ')'  (73)

	'('  shift 136
	.  error


state 93
	Type : Type . '[' ']'  (11)
	Expr : NEW Type . '[' Expr ']'  (74)

	'['  shift 137
	.  error


state 94
	PrintStmt : PRINT '(' . ExprList ')'  (92)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 138
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83
	ExprList  goto 139


state 95
	Expr : READ_INTEGER '(' . ')'  (70)

	')'  shift 140
	.  error


state 96
	Expr : READ_LINE '(' . ')'  (71)

	')'  shift 141
	.  error


state 97
	Expr : INSTANCEOF '(' . Expr ',' IDENTIFIER ')'  (75)
	Receiver : .  (42)

	NULL  shift 46
	THIS  shift 47
	NEW  shift 53
	READ_INTEGER  shift 55
	READ_LINE  shift 56
	LITERAL  shift 57
	INSTANCEOF  shift 58
	SELF_INC  shift 59
	SELF_DEC  shift 60
	NUMINSTANCES  shift 61
	'-'  shift 63
	'!'  shift 64
	'('  shift 65
	IDENTIFIER  reduce 42

	LValue  goto 87
	Expr  goto 142
	Call  goto 89
	Receiver  goto 82
	Constant  goto 83


state 98
	Receiver : Expr . '.'  (41)
	LValue : Expr . '[' Expr ']'  (44)
	Expr : Expr . '?' Expr ':' Expr  (49)
	Expr : Expr . '+' Expr  (50)
	Expr : Expr . '-' Expr  (51)
	Expr : Expr . '*' Expr  (52)
	Expr : Expr . '/' Expr  (53)
	Expr : Expr . '%' Expr  (54)
	Expr : Expr . EQUAL Expr  (55)
	Expr : Expr . NOT_EQUAL Expr  (56)
	Expr : Expr . '<' Expr  (57)
	Expr : Expr . '>' Expr  (58)
	Expr : Expr . LESS_EQUAL Expr  (59)
	Expr : Expr . GREATER_EQUAL Expr  (60)
	Expr : Expr . AND Expr  (61)
	Expr : Expr . OR Expr  (62)
	Expr : Expr . SELF_INC  (66)
	Expr : SELF_INC Expr .  (67)
	Expr : Expr . SELF_DEC  (68)

	'.'  shift 126
	'['  shift 127
	AND  reduce 67
	OR  reduce 67
	LESS_EQUAL  reduce 67
	GREATER_EQUAL  reduce 67
	EQUAL  reduce 67
	NOT_EQUAL  reduce 67
	'+'  reduce 67
	'-'  reduce 67
	'*'  reduce 67
	'/'  reduce 67
	'%'  reduce 67
	'>'  reduce 67
	'<'  reduce 67
	','  reduce 67
	';'  reduce 67
	')'  reduce 67
	']'  reduce 67
	'?'  reduce 67
	':'  reduce 67


state 99
	Receiver : Expr . '.'  (41)
	LValue : Expr . '[' Expr ']'  (44)
	Expr : Expr . '?' Expr ':' Expr  (49)
	Expr : Expr . '+' Expr  (50)
	Expr : Expr . '-' Expr  (51)
	Expr : Expr . '*' Expr  (52)
	Expr : Expr . '/' Expr  (53)
	Expr : Expr . '%' Expr  (54)
	Expr : Expr . EQUAL Expr  (55)
	Expr : Expr . NOT_EQUAL Expr  (56)
	Expr : Expr . '<' Expr  (57)
	Expr : Expr . '>' Expr  (58)
	Expr : Expr . LESS_EQUAL Expr  (59)
	Expr : Expr . GREATER_EQUAL Expr  (60)
	Expr : Expr . AND Expr  (61)
	Expr : Expr . OR Expr  (62)
	Expr : Expr . SELF_INC  (66)
	Expr : Expr . SELF_DEC  (68)
	Expr : SELF_DEC Expr .  (69)

	'.'  shift 126
	'['  shift 127
	AND  reduce 69
	OR  reduce 69
	LESS_EQUAL  reduce 69
	GREATER_EQUAL  reduce 69
	EQUAL  reduce 69
	NOT_EQUAL  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'*'  reduce 69
	'/'  reduce 69
	'%'  reduce 69
	'>'  reduce 69
	'<'  reduce 69
	','  reduce 69
	';'  reduce 69
	')'  reduce 69
	']'  reduce 69
	'?'  reduce 69
	':'  reduce 69


state 100
	Expr : NUMINSTANCES '(' . IDENTIFIER ')'  (77)

	IDENTIFIER  shift 143
	.  error


state 101
	GuardedDoStmt : DO GuardedStmts . OD  (94)
	GuardedStmts : GuardedStmts . CASESEP Expr ':' Stmt  (95)

	CASESEP  shift 135
	OD  shift 144
	.  error

